Character editor: make the group hovers appear as tabs, and make sure they work when the covered groups are larger than the visible editor area #3713 #3231
Former-commit-id: 36470ffa36dc019bcdb602a0c502a89ae91164b4

--- a/sites/all/modules/custom/character_editor/css/character-editor.css
+++ b/sites/all/modules/custom/character_editor/css/character-editor.css
@@ -148,14 +148,15 @@
 }
 
 .character-editor-tree-group-hover {
-  border: 1px solid #888;
+  border: 1px solid #A5A5A5;
   border-bottom: 0;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   overflow: hidden;
-  color: #888;
+  color: #555;
   text-overflow: ellipsis;
   white-space: nowrap;
+  background: #E8E8E8;
 }
 
 .character-editor-tree-group-hover span {
